--- a/MarioTribute/index.html
+++ b/MarioTribute/index.html
@@ -4,6 +4,7 @@
     <head>
         <title>Mario Madness</title>
        <link rel="stylesheet" type="text/css" href="mario.css">
+       <link href="https://fonts.googleapis.com/css?family=Press+Start+2P|VT323" rel="stylesheet">
     </head>
 
     <body>
