--- a/PracticejQuery/starting.html
+++ b/PracticejQuery/starting.html
@@ -5,7 +5,7 @@
         <script
         src"https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
         <link rel='stylesheet' type='text/css' href='style.css'>
-        <script src='brainsjs' async></script>
+        <script src='brains.js' async></script>
     </head>
     <body>
         <h1>FUN WITH jQUERY</h1>
